--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!doctype html>
 <html>
-    <head>
-    <meta charset="utf-8" />
-    
-        <script src="/js/modernizr.js"></script>
-    </head>
+<head>
+<meta charset="utf-8" />
 
-    <link rel="stylesheet" href="/css/app.css" />
+    <script src="/js/modernizr.js"></script>
+
+    <script src="https://use.typekit.net/kbv3itz.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+	<link rel="stylesheet" href="/css/app.css" />
+
+</head>
+
+
+
+
 
 <body>
-<header data-header>
+<header data-header am-SiteHeader>
     <canvas>Fun with Triangles</canvas>
+    <p class="lead">Hello. I'm Alex Kempton, a designer who works with front-end web technologies. I can make you a website or some other fun thing.</p>
 </header>
-<h1></h1>
+
+
+<div am-Row="full middle">
+	<div am-Col>
+		<img src="/images/cutouts/poly_gear.jpg">
+	</div>
+
+	<div am-Col>
+		<h1 class="hug">Getting Trippy with HTML 5 and MIDI</h1>
+		<p class="lead">
+			How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
+
+		</p>
+	</div>
+</div><!-- 
+<div am-Row>
+	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, recusandae! Reiciendis a esse placeat asperiores error consequuntur odit corporis accusantium at. Explicabo quod possimus quam, pariatur earum a culpa repellendus.</p>
+
+	<h2>Header 2 Lorem ipsum dolor sit amet</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, recusandae! Reiciendis a esse placeat asperiores error consequuntur odit corporis accusantium at. Explicabo quod possimus quam, pariatur earum a culpa repellendus.</p>
+
+	<h3>Header 3 Lorem ipsum dolor sit amet</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, recusandae! Reiciendis a esse placeat asperiores error consequuntur odit corporis accusantium at. Explicabo quod possimus quam, pariatur earum a culpa repellendus.</p>
+
+	<h4>Header 4 Lorem ipsum dolor sit amet</h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, recusandae! Reiciendis a esse placeat asperiores error consequuntur odit corporis accusantium at. Explicabo quod possimus quam, pariatur earum a culpa repellendus.</p>
+
+	<h5>Header 5 Lorem ipsum dolor sit amet</h5>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, recusandae! Reiciendis a esse placeat asperiores error consequuntur odit corporis accusantium at. Explicabo quod possimus quam, pariatur earum a culpa repellendus.</p>
+
+	<h6>Header 6 Lorem ipsum dolor sit amet</h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, recusandae! Reiciendis a esse placeat asperiores error consequuntur odit corporis accusantium at. Explicabo quod possimus quam, pariatur earum a culpa repellendus.</p>
+
+</div> -->
 
 <script src="/js/app.js" ></script>
 </body>
