extra strips and styles

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
 <div am-Strip>
 	<div am-Row="full middle">
-		<div am-Col>
+		<div am-Col="6">
 			<img am-Strip-Cutout src="/images/cutouts/poly_gear.gif">
 		</div>
 
-		<div am-Col>
-			<h1 am-txt="hug">Getting Trippy with HTML 5 and MIDI</h1>
+		<div am-Col="6">
+			<h1 am-txt="hug">Getting Trippy with Canvas and MIDI</h1>
 			<p am-txt="lead">
 				How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
 			</p>
@@ -40,10 +40,43 @@
 
 <div am-Strip="beach">
 	<div am-Row="full middle">
-		<div am-Col="8">
+		<div am-Col="6">
 			<h1 am-txt="hug">Making it Swooshy for Santa Monica</h1>
 			<p am-txt="lead">
 				I created an animated microsite to promote health and wellbeing in Santa Monica
+			</p>
+		</div>
+		<div am-Col="6">
+			<div am-Row="center middle">
+				<div am-BigSpinner am-Strip-Cutout>
+					<div am-BigSpinner-Item>
+						<span class="icon-eye"></span>
+					</div>
+					<div am-BigSpinner-Item>
+						<span class="icon-shop"></span>
+					</div>
+					<div am-BigSpinner-Item>
+						<span class="icon-apple"></span>
+					</div>
+					<div am-BigSpinner-Item>
+						<span class="icon-yoga"></span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div am-Strip>
+	<div am-Row="full middle">
+		<div am-Col="6">
+			<img am-Strip-Cutout src="/images/cutouts/poly_gear.gif">
+		</div>
+
+		<div am-Col="6">
+			<h1 am-txt="hug">Getting Trippy with Canvas and MIDI</h1>
+			<p am-txt="lead">
+				How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
 			</p>
 		</div>
 	</div>
