more work on strips

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     	<canvas>Fun with Triangles</canvas>
     </div>
 
-    <p>Hello. I'm Alex Kempton, a designer who works with front-end web technologies. I can make you a website or some other fun thing.</p>
+    <p>I'm Alex Kempton, a designer who works with front-end web technologies. I can make you a website or some other fun thing.</p>
 </header>
 
 
@@ -38,8 +38,8 @@
 	</div>
 </div>
 
-<div am-Strip="beach">
-	<div am-Row="full middle">
+<div am-Strip="alt">
+	<div am-Row="full">
 		<div am-Col="6">
 			<h1 am-txt="hug">Making it Swooshy for Santa Monica</h1>
 			<p am-txt="lead">
@@ -47,20 +47,39 @@
 			</p>
 		</div>
 		<div am-Col="6">
-			<div am-Row="center middle">
-				<div am-BigSpinner am-Strip-Cutout>
-					<div am-BigSpinner-Item>
-						<span class="icon-eye"></span>
+			
+				<div am-BigSpinner>
+					<div am-BigSpinner-Spinner>
+						<div am-BigSpinner-Item>
+							<span class="icon-eye"></span>
+						</div>
+						<div am-BigSpinner-Item>
+							<span class="icon-shop"></span>
+						</div>
+						<div am-BigSpinner-Item>
+							<span class="icon-apple"></span>
+						</div>
+						<div am-BigSpinner-Item>
+							<span class="icon-yoga"></span>
+						</div>
 					</div>
-					<div am-BigSpinner-Item>
-						<span class="icon-shop"></span>
-					</div>
-					<div am-BigSpinner-Item>
-						<span class="icon-apple"></span>
-					</div>
-					<div am-BigSpinner-Item>
-						<span class="icon-yoga"></span>
-					</div>
+				</div>
+			
+		</div>
+
+		<div am-BigSpinner="bg" >
+			<div am-BigSpinner-Spinner="big">
+				<div am-BigSpinner-Item>
+					<span class="icon-eye"></span>
+				</div>
+				<div am-BigSpinner-Item>
+					<span class="icon-shop"></span>
+				</div>
+				<div am-BigSpinner-Item>
+					<span class="icon-apple"></span>
+				</div>
+				<div am-BigSpinner-Item>
+					<span class="icon-yoga"></span>
 				</div>
 			</div>
 		</div>
@@ -70,13 +89,14 @@
 <div am-Strip>
 	<div am-Row="full middle">
 		<div am-Col="6">
-			<img am-Strip-Cutout src="/images/cutouts/poly_gear.gif">
+			<img am-Strip-Cutout src="/images/graphics/saa_map-01.svg">
 		</div>
 
 		<div am-Col="6">
-			<h1 am-txt="hug">Getting Trippy with Canvas and MIDI</h1>
+			<h1 am-txt="hug">Being the Map Man for South African Airways</h1>
 			<p am-txt="lead">
-				How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
+				How I built an interactive flight route map for an airline's trade portal.
+
 			</p>
 		</div>
 	</div>
