animated map strip

--- a/pages/index.html
+++ b/pages/index.html
@@ -79,7 +79,7 @@
 	<div am-Row="full middle">
 		<div am-Col="6">
 			
-			<div am-Strip-Cutout>
+			<div am-Strip-Cutout am-svg style="padding-bottom: 77.55%">
 				<!--=include ../images/graphics/saa_map-01.svg -->
 			</div>
 
