--- a/index.html
+++ b/index.html
@@ -91,13 +91,12 @@
 	<div am-Row="full middle">
 		<div am-Col="6">
 			
-			<div am-Strip-Cutout>
+			<div am-Strip-Cutout am-svg style="padding-bottom: 77.55%">
 				<?xml version="1.0" encoding="utf-8"?>
 				<!-- Generator: Adobe Illustrator 17.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 				<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="245px"
-					 height="190px" viewBox="0 0 245 190" enable-background="new 0 0 245 190" xml:space="preserve">
-				<g id="Layer_1">
+				<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 245 190" enable-background="new 0 0 245 190" xml:space="preserve">
+				<g id="Layer_1_1_">
 					<path fill="none" stroke="#3F3F3F" stroke-miterlimit="10" d="M145.266,96.437l0.358,1.074l-0.384,1.675l0.588,1.628l-0.486,1.305
 						l0.281,1.206l-7.084-0.05l-0.153,11.164c1.354,1.844,2.863,3.551,4.526,5.12c-4.734,1.453-9.567,1.758-14.474,0.926l-2.353-1.696
 						c-4.742,0.053-9.63,0.037-14.269,0.411l-2.02-1.616c-2.048-0.226-4.051,0.18-5.882,1.18c-0.187-6.635,1.83-13.477,6.444-18.475
@@ -147,7 +146,7 @@
 						l0.742,1.515c-0.379,2.514-0.72,5.033-1.023,7.557c1.071,0.697,2.172,1.35,3.299,1.955l0.921-0.627l0.307,3.769l-2.608-0.05
 						c-0.824-1.18-1.71-2.311-2.66-3.392l-2.583-0.476l-0.767-1.828l-2.071,1.101l-2.736-0.476l-1.125-1.576
 						c-1.232-0.288-2.476-0.372-3.734-0.25l-0.205-1.074c-2.407-0.257-4.824-0.096-7.135,0.474l0.179-4.112l-1.125-1.293
-						c-0.331-1.412-0.254-2.801,0.23-4.168c-0.662-1.068-0.902-2.234-0.742-3.488l-4.117,0.025l0.307-1.235L132.3,82.74l-0.179,0.593
+						c-0.331-1.412-0.254-2.801,0.23-4.168c-0.662-1.068-0.902-2.234-0.742-3.488l-4.117,0.025l0.307-1.235l-1.74,0.027l-0.179,0.593
 						l-2.123,0.123c-0.358,0.999-0.811,1.96-1.355,2.868l-1.867-0.495c-1.055,0.509-2.194,0.765-3.376,0.767
 						c-1.831-2.203-3.145-4.739-3.887-7.506c-4.573-0.445-9.235-0.191-13.604,0.764l-0.46-1.059l0.844-0.369
 						c-0.141-0.906,0.08-1.694,0.665-2.363l1.253-0.713l0.895,0.344l1.151-1.303l1.841,0.049l0.23,0.959l1.253,0.59
@@ -180,15 +179,15 @@
 						l0.153-1.353l-1.483-2.931c0.342-2.4,1.117-4.651,2.327-6.744c-0.804-3.082-1.24-6.288-1.279-9.445
 						c2.451-0.249,4.966-0.216,7.39,0.1l1.1-0.574l1.56,0.275l-0.23,1.073l1.406,1.794c-0.058,1.748,0.044,3.487,0.307,5.217
 						l0.869,1.239C65.394,33.644,65.808,36.482,67.679,38.926z"/>
-					<path fill="none" stroke="#3F3F3F" stroke-miterlimit="10" d="M35.432,32.929l-0.972-0.099l-0.69,1.384l-0.972-0.025l-0.639-0.717
+					<path fill="none" stroke="#3F3F3F" stroke-miterlimit="10" d="M35.432,32.929L34.46,32.83l-0.69,1.384l-0.972-0.025l-0.639-0.717
 						l0.205-1.385l-1.406-2.105c-0.815,0.367-1.658,0.586-2.557,0.669l0.051-1.264l-0.563-0.893l0.128-0.993
 						c-0.406-0.994-0.968-1.889-1.688-2.685h-2.711l-0.793,0.647l-0.946,0.075c-0.659,1.32-1.555,2.354-2.787,3.204
-						c-1.139-1.876-2.661-3.389-4.526-4.498c-0.038-0.874-0.328-1.638-0.869-2.293l-0.997-0.574l1.509-1.674l1.048,0.05l0.869-0.575
+						c-1.139-1.876-2.661-3.389-4.526-4.498c-0.038-0.874-0.328-1.638-0.869-2.293L12.7,21.377l1.509-1.674l1.048,0.05l0.869-0.575
 						h0.742l0.537-0.476l-0.281-1.152l0.384-0.351l0.051-1.179c1.633,0.177,3.275,0.451,4.833,0.803l0.256-0.376l1.841,0.276
 						l0.486-0.201l0.205,1.279c0.532,0.048,1.009-0.11,1.432-0.476l0.563,0.125l0.946,0.877l1.432,0.275
 						c0.887-0.691,1.831-1.251,2.864-1.704l0.665,0.1c0.8,1.112,1.615,2.118,2.557,3.155l-0.69,0.9l-0.128,1.123l0.716-0.349
 						l0.409,0.424l-0.179,1.022l1.048,0.996l-0.665,0.249l-0.281,1.169c0.744,1.312,1.283,2.718,1.611,4.195l-1.253,0.396l-0.332,0.495
-						l0.281,0.644l-0.205,1.509H35.432z"/>
+						l0.281,0.644l-0.205,1.509h-0.539V32.929z"/>
 					<path fill="none" stroke="#3F3F3F" stroke-miterlimit="10" d="M12.699,21.378l-1.816-1.449l-1.432-0.225l-0.767-0.976l0.026-0.526
 						l-1.048-0.727l-0.205-0.752c0.925-0.476,1.905-0.635,2.915-0.452c2.221-0.462,4.851-0.548,7.186-0.251l-0.051,1.179l-0.384,0.351
 						l0.281,1.152l-0.537,0.476h-0.742l-0.869,0.575l-1.048-0.05L12.699,21.378z"/>
@@ -301,16 +300,24 @@
 						C173.647,132.514,172.119,134.809,169.994,136.635z"/>
 				</g>
 				<g id="flights">
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M142.5,58.5c0,0,28.5-29.75,50.75-20.75"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M195,38.5c0,0-44.5,29.75-31,70"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M164,110.5c0,0,54.75-16.75,61.25,12.25"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M224.25,125.5c0,0-51-20.25-66.25,27.25"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M141.25,58.75c0,0,4.5-28.5-13.25-24.5"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M126.5,34.75c0,0-38.75-41.25-83.25-2.5"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M43,34.25c0,0,81.75-17.25,80.25,65"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M123.5,100.5c0,0,42.5-49.75,62-24"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M186.75,78c0,0-62,17-64,56.75"/>
-					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M122.5,136c0,0,29.75-6,34.5,19.25"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M159,152.5c0,0,3.333-23.333-14.667-19.667"
+						/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M142.667,131.833c0,0-8-79.667,50-68.667"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M194,61.833c0,0-23-65-89-20"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M104.667,43.833c0,0,40-18.333,36,9.667"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M139.667,55.167c0,0-26.667,6-25.333,30.333
+						"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M114,86.833c0,0-3.667-77.667-54.333-53.667
+						"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M58.333,35.5c0,0,78.333-13.333,85.667,36"
+						/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M143.333,73.5
+						c0,0-28.333,10.667-18.333,36.667"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M126,111.5c0,0,35-48,62-24"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M188.667,90.167c0,0-58,11-67.667,54.333"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M121.333,146.5c0,0,26.333-50.333,58-25"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M181.333,122.167c0,0,34.667-29,44.667-2"/>
+					<path fill="none" stroke="#FFFFFF" stroke-linejoin="round" stroke-miterlimit="10" d="M225,122.167c0,0-54.667-5-64.667,30.667"/>
 				</g>
 				</svg>
 				
