--- a/projects/trippy.html
+++ b/projects/trippy.html
@@ -12,10 +12,15 @@
 
 </head>
 <header am-SiteHeader>
-
-	<div am-SiteHeader-Header data-header="/images/header_wide.svg">
+	
+	<div am-SiteHeader-Corner data-header="/images/graphics/triangle-01.svg">
     	<canvas>Fun with Triangles</canvas>
     </div>
+
+	<h1>Getting Trippy with Canvas and MIDI</h1>
+	<p am-txt="lead">
+		How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
+	</p>
 
 </header>
 <article>
@@ -24,10 +29,7 @@
 	<div am-Strip>
 		<div am-TextContainer>
 			<header am-TextContainer-Header>
-				<h1>Getting Trippy with Canvas and MIDI</h1>
-				<p am-txt="lead">
-					How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
-				</p>
+				
 			</header>
 			<p>Towards the end of 2014 I was dipping my toe into HTML5 Canvas. The canvas element allows a programmer to “draw” whatever they like onto it, using Javascript. It’s uses range from boring graphs to incredible games. My aim was to just experiment with it and hopefully create something visually interesting along the way.</p>
 			
@@ -86,5 +88,8 @@
 </div>
 	<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 <script src="/js/app.js" ></script>
+<script>
+	var FunWithTriangles = new FWT();
+</script>
 </body>
 </html>
