--- a/projects/trippy.html
+++ b/projects/trippy.html
@@ -17,7 +17,7 @@
     	<a href="/"><canvas>Fun with Triangles</canvas></a>
     </div>
 	
-	<h1 data-fittext>Getting Trippy with Canvas and MIDI</h1>
+	<h1>Getting Trippy with Canvas and MIDI</h1>
 	<p am-txt="lead">
 		How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
 	</p>
@@ -26,7 +26,7 @@
 <article>
 	<div am-Strip>
 		<div am-ContentContainer>
-		
+
 				<h2>Experimenting with Canvas</h2>
 				<p>Towards the end of 2014 I was dipping my toe into HTML5 Canvas. The canvas element allows a programmer to “draw” whatever they like onto it, using Javascript. It’s uses range from boring graphs to incredible games. My aim was to just experiment with it and hopefully create something visually interesting along the way.</p>
 	
