strip hover states and linking

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,6 +11,104 @@
 </header>
 
 
+<a am-Strip href='/projects/canvas-midi'>
+		<div am-Row="full middle">
+			<div am-Col="6" am-Strip-Anim="1 left">
+				<img am-Strip-Cutout src="/images/cutouts/poly_gear.gif">
+			</div>
+
+			<div am-Col="6">
+				<h1 am-txt="hug" am-Strip-Anim="2 right">Getting Trippy with Canvas and MIDI</h1>
+				<p am-txt="lead" am-Strip-Anim="3 right">
+					How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
+				</p>
+			</div>
+		</div>
+	</div>
+</a>
+
+<a am-Strip="alt">
+	<div am-Row="full">
+		<div am-Col="6">
+			<h1 am-txt="hug" am-Strip-Anim="2 left">Making it Swooshy for Santa Monica</h1>
+			<p am-txt="lead" am-Strip-Anim="3 left">
+				I created an animated microsite to promote health and wellbeing in Santa Monica
+			</p>
+		</div>
+		<div am-Col="6" am-Strip-Anim="1 right">
+			
+				<div am-BigSpinner>
+					<div am-BigSpinner-Spinner>
+						<div am-BigSpinner-Item>
+							<span class="icon-eye"></span>
+						</div>
+						<div am-BigSpinner-Item>
+							<span class="icon-shop"></span>
+						</div>
+						<div am-BigSpinner-Item>
+							<span class="icon-apple"></span>
+						</div>
+						<div am-BigSpinner-Item>
+							<span class="icon-yoga"></span>
+						</div>
+					</div>
+				</div>
+			
+		</div>
+
+		<div am-BigSpinner="bg" >
+			<div am-BigSpinner-Spinner="big">
+				<div am-BigSpinner-Item>
+					<span class="icon-eye"></span>
+				</div>
+				<div am-BigSpinner-Item>
+					<span class="icon-shop"></span>
+				</div>
+				<div am-BigSpinner-Item>
+					<span class="icon-apple"></span>
+				</div>
+				<div am-BigSpinner-Item>
+					<span class="icon-yoga"></span>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+</a>
+
+<a am-Strip>
+	<div am-Row="full middle">
+		<div am-Col="6" am-Strip-Anim="1 left">
+		
+			<div am-Strip-Cutout am-svg style="padding-bottom: 77.55%">
+			<!--=include ../images/graphics/saa_map-01.svg -->
+			</div>
+
+		</div>
+
+		<div am-Col="6">
+			<h1 am-txt="hug" am-Strip-Anim="2 right">Being the Map Man for South African Airways</h1>
+			<p am-txt="lead" am-Strip-Anim="3 right">
+				How I built an interactive flight route map for an airline's trade portal.
+
+			</p>
+		</div>
+	</div>
+</div>
+
+<!--=include ../partials/foot.html --><!--=include ../partials/head.html -->
+
+<body>
+<header am-SiteHeader>
+
+	<div am-SiteHeader-Header data-header="/images/header_tall.svg">
+    	<canvas>Fun with Triangles</canvas>
+    </div>
+
+    <p>I'm Alex Kempton, a designer who works with front-end web technologies. I can make you a website or some other fun thing.</p>
+</header>
+
+
 <div am-Strip>
 	<div am-Row="full middle">
 		<div am-Col="6">
