--- a/pages/projects/canvas-midi/index.html
+++ b/pages/projects/canvas-midi/index.html
@@ -1,4 +1,4 @@
-<!--=include ../../partials/head.html -->
+<!--=include ../../../partials/head.html -->
 <header am-SiteHeader>
 	
 	<div am-SiteHeader-Header="small" data-header="/images/header_wide.svg">
@@ -90,5 +90,5 @@
 		</div>
 	</article>
 </div>
-	<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
-<!--=include ../../partials/foot.html -->
+<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+<!--=include ../../../partials/foot.html -->
