fixups: nicer map rollover

--- a/projects/canvas-midi/index.html
+++ b/projects/canvas-midi/index.html
@@ -103,6 +103,9 @@
 	</div>
 </article>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+<div am-SiteFooter>
+</div>
+
 <script src="/js/app.js" ></script>
 <script>
 	var FunWithTriangles = new FWT();
