--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<!-- Generator: Adobe Illustrator 17.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 			<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 245 190" enable-background="new 0 0 245 190" xml:space="preserve">
-			<g id="Layer_1_1_">
+			<g id="map">
 				<path fill="none" stroke="#3F3F3F" stroke-miterlimit="10" d="M145.266,96.437l0.358,1.074l-0.384,1.675l0.588,1.628l-0.486,1.305
 					l0.281,1.206l-7.084-0.05l-0.153,11.164c1.354,1.844,2.863,3.551,4.526,5.12c-4.734,1.453-9.567,1.758-14.474,0.926l-2.353-1.696
 					c-4.742,0.053-9.63,0.037-14.269,0.411l-2.02-1.616c-2.048-0.226-4.051,0.18-5.882,1.18c-0.187-6.635,1.83-13.477,6.444-18.475
@@ -334,6 +334,9 @@
 			</p>
 		</div>
 	</div>
+</a>
+
+<div am-SiteFooter>
 </div>
 
 <script src="/js/app.js" ></script>
