refactored how the tri effect works to allow for multi

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <body>
 <header am-SiteHeader>
 
-	<div am-SiteHeader-Header data-header="/images/header_tall.svg">
+	<div am-SiteHeader-Header data-triEffect="/images/header_tall.svg">
     	<canvas>Fun with Triangles</canvas>
     </div>
 
