--- a/pages/projects/canvas-midi/index.html
+++ b/pages/projects/canvas-midi/index.html
@@ -1,7 +1,7 @@
 <!--=include ../../../partials/head.html -->
 <header am-SiteHeader>
 	
-	<div am-SiteHeader-Header="small" data-header="/images/header_wide.svg">
+	<div am-SiteHeader-Header="small" data-triEffect="/images/header_wide.svg">
     	<a href="/"><canvas>Fun with Triangles</canvas></a>
     </div>
 	
