--- a/projects/canvas-midi/index.html
+++ b/projects/canvas-midi/index.html
@@ -13,7 +13,7 @@
 </head>
 <header am-SiteHeader>
 	
-	<div am-SiteHeader-Header="small" data-header="/images/header_wide.svg">
+	<div am-SiteHeader-Header="small" data-triEffect="/images/header_wide.svg">
     	<a href="/"><canvas>Fun with Triangles</canvas></a>
     </div>
 	
@@ -103,7 +103,8 @@
 	</div>
 </article>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
-<div am-SiteFooter>
+<div am-SiteFooter data-triEffect>
+	<canvas></canvas>
 </div>
 
 <script src="/js/app.js" ></script>
