--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <header am-SiteHeader>
 
-	<div am-SiteHeader-Header data-header="/images/header_tall.svg">
+	<div am-SiteHeader-Header data-triEffect="/images/header_tall.svg">
     	<canvas>Fun with Triangles</canvas>
     </div>
 
@@ -336,7 +336,8 @@
 	</div>
 </a>
 
-<div am-SiteFooter>
+<div am-SiteFooter data-triEffect>
+	<canvas></canvas>
 </div>
 
 <script src="/js/app.js" ></script>
