footer canvas sizing and adjustmetns

--- a/index.html
+++ b/index.html
@@ -337,7 +337,12 @@
 </a>
 
 <div am-SiteFooter data-triEffect>
-	<canvas></canvas>
+	<canvas am-SiteFooter-Bg></canvas>
+	
+	<div am-SiteFooter-Inner>
+		<h1>Test</h1>
+	</div>
+	
 </div>
 
 <script src="/js/app.js" ></script>
