--- a/projects/canvas-midi/index.html
+++ b/projects/canvas-midi/index.html
@@ -104,7 +104,12 @@
 </article>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 <div am-SiteFooter data-triEffect>
-	<canvas></canvas>
+	<canvas am-SiteFooter-Bg></canvas>
+	
+	<div am-SiteFooter-Inner>
+		<h1>Test</h1>
+	</div>
+	
 </div>
 
 <script src="/js/app.js" ></script>
