--- a/projects/canvas-midi/index.html
+++ b/projects/canvas-midi/index.html
@@ -107,7 +107,29 @@
 	<canvas am-SiteFooter-Bg></canvas>
 	
 	<div am-SiteFooter-Inner>
-		<h1>Test</h1>
+		<h1>Get in touch</h1>
+		<p>If you have any ideas for projects, collaborations or just want to say hello, feel free to drop me a line. I'm based in Hackney, London.</p>
+
+		<ul>
+			<li>
+				<strong>Email:</strong> 
+				<a href="mailto:alex@funwithtriangles.com">alex@funwithtriangles.com</a>
+			</li>
+			<li>
+				<strong>Phone:</strong> 
+				+44 (0) 7450 846 211
+			</li>
+			<li>
+				<strong>Instagram:</strong> 
+				<a href="#">@funwithtriangles</a>
+			</li>
+			<li>
+				<strong>Twitter:</strong> 
+				<a href="#">@funwithtriangles</a>
+			</li>
+		</ul>
+		
+
 	</div>
 	
 </div>
