--- a/pages/index.html
+++ b/pages/index.html
@@ -11,14 +11,14 @@
 </header>
 
 
-<a am-Strip href='/projects/canvas-midi'>
+<a am-Strip="project" href='/projects/canvas-midi'>
 		<div am-Row="full middle">
-			<div am-Col="6" am-Strip-Anim="1 left">
+			<div am-Col="m6" am-Strip-Anim="1 left">
 				<img am-Strip-Cutout src="/images/cutouts/poly_gear.gif">
 			</div>
 
-			<div am-Col="6">
-				<h1 am-txt="hug" am-Strip-Anim="2 right">Getting Trippy with Canvas and MIDI</h1>
+			<div am-Col="m6">
+				<h2 am-txt="hug" am-Strip-Anim="2 right">Getting Trippy with Canvas and MIDI</h2>
 				<p am-txt="lead" am-Strip-Anim="3 right">
 					How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
 				</p>
@@ -27,15 +27,10 @@
 	</div>
 </a>
 
-<a am-Strip="alt">
+<a am-Strip="alt project">
 	<div am-Row="full">
-		<div am-Col="6">
-			<h1 am-txt="hug" am-Strip-Anim="2 left">Making it Swooshy for Santa Monica</h1>
-			<p am-txt="lead" am-Strip-Anim="3 left">
-				I created an animated microsite to promote health and wellbeing in Santa Monica
-			</p>
-		</div>
-		<div am-Col="6" am-Strip-Anim="1 right">
+		
+		<div am-Col="m6" am-Strip-Anim="1 right">
 			
 				<div am-BigSpinner>
 					<div am-BigSpinner-Spinner>
@@ -56,7 +51,14 @@
 			
 		</div>
 
-		<div am-BigSpinner="bg" >
+		<div am-Col="m6">
+			<h2 am-space="s-mt-10" am-txt="hug" am-Strip-Anim="2 left">Making it Swooshy for Santa Monica</h2>
+			<p am-txt="lead" am-Strip-Anim="3 left">
+				I created an animated microsite to promote health and wellbeing in Santa Monica
+			</p>
+		</div>
+
+		<div am-BigSpinner="bg" am-Strip-Anim="1">
 			<div am-BigSpinner-Spinner="big">
 				<div am-BigSpinner-Item>
 					<span class="icon-eye"></span>
@@ -76,9 +78,9 @@
 	</div>
 </a>
 
-<a am-Strip>
+<a am-Strip="project">
 	<div am-Row="full middle">
-		<div am-Col="6" am-Strip-Anim="1 left">
+		<div am-Col="m6" am-Strip-Anim="1 left">
 		
 			<div am-Strip-Cutout am-svg style="padding-bottom: 77.55%">
 			<!--=include ../images/graphics/saa_map-01.svg -->
@@ -86,8 +88,8 @@
 
 		</div>
 
-		<div am-Col="6">
-			<h1 am-txt="hug" am-Strip-Anim="2 right">Being the Map Man for South African Airways</h1>
+		<div am-Col="m6">
+			<h2 am-txt="hug" am-Strip-Anim="2 right">Being the Map Man for South African Airways</h2>
 			<p am-txt="lead" am-Strip-Anim="3 right">
 				How I built an interactive flight route map for an airline's trade portal.
 
