source order fix, grid adjustment

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <a am-Strip="project" href='/projects/canvas-midi'>
-		<div am-Row="full middle">
+		<div am-Row="middle">
 			<div am-Col="m6" am-Strip-Anim="1 left">
 				<img am-Strip-Cutout src="/images/cutouts/poly_gear.gif">
 			</div>
@@ -40,9 +40,9 @@
 </a>
 
 <a am-Strip="alt project">
-	<div am-Row="full">
+	<div am-Row="middle">
 		
-		<div am-Col="m6" am-Strip-Anim="1 right">
+		<div am-Col="m6 m-o1" am-Strip-Anim="1 right">
 			
 				<div am-BigSpinner>
 					<div am-BigSpinner-Spinner>
@@ -91,7 +91,7 @@
 </a>
 
 <a am-Strip="project">
-	<div am-Row="full middle">
+	<div am-Row="middle">
 		<div am-Col="m6" am-Strip-Anim="1 left">
 		
 			<div am-Strip-Cutout am-svg style="padding-bottom: 77.55%">
