neater contact panel

--- a/index.html
+++ b/index.html
@@ -345,21 +345,21 @@
 		<h1>Get in touch</h1>
 		<p>If you have any ideas for projects, collaborations or just want to say hello, feel free to drop me a line. I'm based in Hackney, London.</p>
 
-		<ul>
+		<ul am-SiteFooter-Contact>
 			<li>
-				<strong>Email:</strong> 
+				<h5>Email</h5> 
 				<a href="mailto:alex@funwithtriangles.com">alex@funwithtriangles.com</a>
 			</li>
 			<li>
-				<strong>Phone:</strong> 
+				<h5>Phone</h5> 
 				+44 (0) 7450 846 211
 			</li>
 			<li>
-				<strong>Instagram:</strong> 
+				<h5>Instagram:</h5> 
 				<a href="#">@funwithtriangles</a>
 			</li>
 			<li>
-				<strong>Twitter:</strong> 
+				<h5>Twitter</h5> 
 				<a href="#">@funwithtriangles</a>
 			</li>
 		</ul>
