--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 	</div>
 </a>
 
-<div am-SiteFooter data-triEffect>
+<div am-SiteFooter data-triEffect id="contact">
 	<canvas am-SiteFooter-Bg></canvas>
 	
 	<div am-SiteFooter-Inner>
