--- a/projects/canvas-midi/index.html
+++ b/projects/canvas-midi/index.html
@@ -98,12 +98,12 @@
 	<div am-Strip="alt">
 		<div am-ContentContainer>
 			<h2>Let’s make something cool!</h2>
-			<p>I’m always interested in working on more projects that push the boundaries of web technology. Whether it’s using 3D libraries such as Three.js; a project that has an audio reactive element to it or you just want to make something that is plain old trippy, feel free to <a href="/contact">get in touch</a>.</p>
+			<p>I’m always interested in working on more projects that push the boundaries of web technology. Whether it’s using 3D libraries such as Three.js; a project that has an audio reactive element to it or you just want to make something that is plain old trippy, feel free to <a href="#contact" data-scrollto="#contact">get in touch</a>.</p>
 		</div>
 	</div>
 </article>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
-<div am-SiteFooter data-triEffect>
+<div am-SiteFooter data-triEffect id="contact">
 	<canvas am-SiteFooter-Bg></canvas>
 	
 	<div am-SiteFooter-Inner>
