--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8" />
+	<meta charset="utf-8" />
+	
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Fun with Triangles</title>
+    <meta name="description" content="Alex Kempton works with Front-End web technologies.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="/js/modernizr.js"></script>
 
