--- a/projects/canvas-midi/index.html
+++ b/projects/canvas-midi/index.html
@@ -54,7 +54,7 @@
 
 			<h2>It’s reactive!</h2>
 		
-			<figure am-ArticleMedia>
+			<figure am-ArticleMedia="first">
 				<img src="/images/gifs/polygen_sprite.gif">
 				<figcaption am-ArticleMedia-Caption>2D sprites cycle in time with the beat</figcaption>
 			</figure>
@@ -71,7 +71,7 @@
 
 			<h2>Three.js</h2>
 
-			<figure am-ArticleMedia>
+			<figure am-ArticleMedia="first">
 				<img src="/images/gifs/polygen_rgb.gif">
 				<figcaption am-ArticleMedia-Caption>The “RGB Split” pixel shader being applied to a scene</figcaption>
 			</figure>
@@ -90,7 +90,7 @@
 			<p>Amazingly, Chrome now has the ability to work with MIDI instruments. I assume the primary idea behind this will be to allow developers to write all sorts of web based audio apps allowing musicians to plug in a MIDI keyboard (or whatever else). The Polygen system makes use of this functionality, allowing for scenes and effects to be controlled by hardware.</p>
 			
 			<h2>Keeping the community (and my sanity) in mind</h2>
-			<figure am-ArticleMedia>
+			<figure am-ArticleMedia="first">
 				<img src="/images/gifs/polygen_scenes.gif">
 				<figcaption am-ArticleMedia-Caption>Eventually, anyone could contribute an effect with a single file</figcaption>
 			</figure>
