--- a/projects/canvas-midi.html
+++ b/projects/canvas-midi.html
@@ -1,4 +1,24 @@
-<!--=include ../../../partials/head.html -->
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Fun with Triangles</title>
+    <meta name="description" content="Alex Kempton works with Front-End web technologies.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="/js/modernizr.js"></script>
+
+    <script src="https://use.typekit.net/kbv3itz.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+	<link rel="stylesheet" href="/css/app.css" />
+
+</head>
+<body>
+
+ 
 <header am-SiteHeader>
 	
 	<div am-SiteHeader-Header="small" data-triEffect="/images/header_wide.svg">
@@ -91,4 +111,44 @@
 	</div>
 </article>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
-<!--=include ../../../partials/foot.html -->
+
+
+
+
+<div am-SiteFooter data-triEffect id="contact">
+	<canvas am-SiteFooter-Bg></canvas>
+	
+	<div am-SiteFooter-Inner>
+		<h1>Get in touch</h1>
+		<p>If you have any ideas for projects, collaborations or just want to say hello, feel free to drop me a line. I'm based in Hackney, London.</p>
+
+		<ul am-SiteFooter-Contact>
+			<li>
+				<h5>Email</h5> 
+				<a href="mailto:alex@funwithtriangles.com">alex@funwithtriangles.com</a>
+			</li>
+			<li>
+				<h5>Phone</h5> 
+				+44 (0) 7450 846 211
+			</li>
+			<li>
+				<h5>Instagram:</h5> 
+				<a href="#">@funwithtriangles</a>
+			</li>
+			<li>
+				<h5>Twitter</h5> 
+				<a href="#">@funwithtriangles</a>
+			</li>
+		</ul>
+		
+
+	</div>
+	
+</div>
+
+<script src="/js/app.js" ></script>
+<script>
+	var FunWithTriangles = new FWT();
+</script>
+</body>
+</html>
