santa monica simple page

--- a/app/projects/canvas-midi.html
+++ b/app/projects/canvas-midi.html
@@ -22,8 +22,8 @@
 <header am-SiteHeader>
 	
 	<div am-SiteHeader-Header="small" data-triEffect="/images/header_wide.svg">
-    	<a href="/"><canvas>Fun with Triangles</canvas></a>
-    </div>
+	<a href="/"><canvas>Fun with Triangles</canvas></a>
+</div>
 	
 	<h1>Getting Trippy with Canvas and MIDI</h1>
 	<p am-txt="lead">
@@ -58,7 +58,7 @@
 			<h2>It’s reactive!</h2>
 		
 			<figure am-ArticleMedia="first">
-				<img src="/images/gifs/polygen_sprite.gif">
+				<img src="/images/gifs/polygen_sprite.gif" alt="Animated cartoon face">
 				<figcaption am-ArticleMedia-Caption>2D sprites cycle in time with the beat</figcaption>
 			</figure>
 			
@@ -75,7 +75,7 @@
 			<h2>Three.js</h2>
 
 			<figure am-ArticleMedia="first">
-				<img src="/images/gifs/polygen_rgb.gif">
+				<img src="/images/gifs/polygen_rgb.gif" alt="Icosahedron with an RGB effect applied">
 				<figcaption am-ArticleMedia-Caption>The “RGB Split” pixel shader being applied to a scene</figcaption>
 			</figure>
 
@@ -94,7 +94,7 @@
 			
 			<h2>Keeping the community (and my sanity) in mind</h2>
 			<figure am-ArticleMedia="first">
-				<img src="/images/gifs/polygen_scenes.gif">
+				<img src="/images/gifs/polygen_scenes.gif" alt="Multiple still shots from the Polygen engine">
 				<figcaption am-ArticleMedia-Caption>Eventually, anyone could contribute an effect with a single file</figcaption>
 			</figure>
 			
