--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 </header>
 
 
-<a am-Strip="project" href='/projects/canvas-midi'>
+<a am-Strip="project" href="/projects/canvas-midi">
 		<div am-Row="middle">
 			<div am-Col="m6" am-Strip-Anim="1 left">
 				<img am-Strip-Cutout src="/images/cutouts/poly_gear.gif">
@@ -45,7 +45,7 @@
 	</div>
 </a>
 
-<a am-Strip="alt project">
+<a am-Strip="alt project" href="/projects/santa-monica">
 	<div am-Row="middle">
 		
 		<div am-Col="m6 m-o1" am-Strip-Anim="1 right">
