responsive, robust grid

--- a/app/projects/santa-monica.html
+++ b/app/projects/santa-monica.html
@@ -52,14 +52,14 @@
 			<h2>Still works great on mobile</h2>
 			
 			<div am-Row>
-				<div am-Col="4">
+				<div am-Col="m4">
 					<figure am-ArticleMedia>
 						<img src="/images/graphics/sm_phone.gif" alt="Santa Monica website inside a mobile">
 					
 						<figcaption am-ArticleMedia-Caption>The website becomes simpler on a smaller screen.</figcaption>
 					</figure>
 				</div>
-				<div am-Col="6">
+				<div am-Col="m8 l6">
 
 					<div am-ArticleMedia-Compliment>
 						<p>The funky concept for the desktop version of this website wasn’t going to translate onto a small screen. It was easy to create a simpler version of the site while retaining the exact same content.</p>
