article tags and link

--- a/app/projects/canvas-midi.html
+++ b/app/projects/canvas-midi.html
@@ -30,6 +30,15 @@
 		How I teamed up with a techno producer to build a fully audio reactive visual system that runs on web technologies.
 	</p>
 
+	<ul am-FeatureList>
+		<li am-FeatureList-Title>Skills involved:</li>
+		<li>Three.js</li>
+		<li>Canvas</li>
+		<li>Web MIDI API</li>
+		<li>Web Audio API</li>
+		<li am-FeatureList-Link>View project: <a href="http://polyop.uk">polyop.uk</a></li>
+	</ul>
+
 </header>
 <article>
 	<div am-Strip>
