--- a/app/projects/santa-monica.html
+++ b/app/projects/santa-monica.html
@@ -30,6 +30,14 @@
 		I created an animated microsite to promote health and wellbeing in Santa Monica.
 	</p>
 
+	<ul am-FeatureList>
+		<li am-FeatureList-Title>Skills involved:</li>
+		<li>Greensock</li>
+		<li>Animation</li>
+		<li>Responsive Web Design</li>
+		<li am-FeatureList-Link>View project: <a href="http://santamonicawellbeing.co.uk/">santamonicawellbeing.co.uk</a></li>
+	</ul>
+
 </header>
 <article>
 	<div am-Strip>
@@ -40,7 +48,7 @@
 			<h2>Greensock is amazing</h2>
 
 			<figure am-ArticleMedia>
-				<img src="/images/gifs/santa_monica.gif" alt="Santa Monica website with animation">
+				<a am-a="plain" href="http://santamonicawellbeing.co.uk/"><img src="/images/gifs/santa_monica.gif" alt="Santa Monica website with animation"></a>
 			
 				<figcaption am-ArticleMedia-Caption>Greensock makes it simple to fly elements about.</figcaption>
 			</figure>
@@ -59,7 +67,7 @@
 						<figcaption am-ArticleMedia-Caption>The website becomes simpler on a smaller screen.</figcaption>
 					</figure>
 				</div>
-				<div am-Col="m8 l6">
+				<div am-Col="m8 l">
 
 					<div am-ArticleMedia-Compliment>
 						<p>The funky concept for the desktop version of this website wasn’t going to translate onto a small screen. It was easy to create a simpler version of the site while retaining the exact same content.</p>
