--- a/app/projects/santa-monica.html
+++ b/app/projects/santa-monica.html
@@ -13,6 +13,10 @@
     <script src="https://use.typekit.net/kbv3itz.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
+	<link rel="icon" type="image/png" href="/images/fav/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="/images/fav/favicon-16x16.png" sizes="16x16" />
+
+
 	<link rel="stylesheet" href="/css/app.css" />
 
 </head>
