updated contact details and added GA

--- a/app/projects/polyop.html
+++ b/app/projects/polyop.html
@@ -146,11 +146,11 @@
 			</li>
 			<li>
 				<h5>Instagram:</h5> 
-				<a href="#">@funwithtriangles</a>
+				<a href="https://www.instagram.com/funwithtriangles/">@funwithtriangles</a>
 			</li>
 			<li>
 				<h5>Twitter</h5> 
-				<a href="#">@funwithtriangles</a>
+				<a href="https://twitter.com/funtriangles">@funtriangles</a>
 			</li>
 		</ul>
 		
