--- a/app/projects/polyop.html
+++ b/app/projects/polyop.html
@@ -138,7 +138,7 @@
 		<ul am-SiteFooter-Contact>
 			<li>
 				<h5>Email</h5> 
-				<a href="mailto:alex@funwithtriangles.com">alex@funwithtriangles.com</a>
+				<a href="mailto:alex@funwithtriangles.net">alex@funwithtriangles.net</a>
 			</li>
 			<li>
 				<h5>Phone</h5> 
