--- a/app/projects/polyop.html
+++ b/app/projects/polyop.html
@@ -54,7 +54,7 @@
 			<figure am-ArticleMedia>
 				<p data-height="400" data-theme-id="0" data-slug-hash="dfpHq" data-default-tab="result" data-user="iamalexkempton" class='codepen'>See the Pen <a href='http://codepen.io/iamalexkempton/pen/dfpHq/'>Accidental trippiness</a> by iamalexkempton (<a href='http://codepen.io/iamalexkempton'>@iamalexkempton</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
 			
-				<figcaption am-ArticleMedia-Caption>“Accidental Trippiness”: I created this while fooling around with spirals  canvas.</figcaption>
+				<figcaption am-ArticleMedia-Caption>“Accidental Trippiness”: I created this while fooling around with spirals in canvas.</figcaption>
 			</figure>
 	
 			<p>I was using Codepen for a lot of these experiments, the ability to quickly “fork” a pen was nice and it also gave me an easy way to share what I was doing. A music producer friend of mine, Jack Driscoll, liked what I was making and proposed we collaborate on something that reacts to music. A year later and what we’ve created is quite something.</p>
