--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Fun With Triangles</title>
+    <title>Fun With Triangles | Fun With Triangles</title>
     <meta name="description" content="Alex Kempton works with Front-End web technologies.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -76,7 +76,7 @@
 		<div am-Col="m6">
 			<h2 am-space="s-mt-10" am-txt="hug" am-Strip-Anim="2 left">Making it Swooshy for Santa Monica</h2>
 			<p am-txt="lead" am-Strip-Anim="3 left">
-				I created an animated microsite to promote health and wellbeing in Santa Monica
+				I created an animated microsite to promote health and wellbeing in Santa Monica.
 			</p>
 		</div>
 
@@ -341,8 +341,7 @@
 		<div am-Col="m6">
 			<h2 am-txt="hug" am-Strip-Anim="2 right">Being the Map Man for South African Airways</h2>
 			<p am-txt="lead" am-Strip-Anim="3 right">
-				How I built an interactive flight route map for an airline's trade portal.
-
+				How I built an interactive flight route map for South African Airways.
 			</p>
 		</div>
 	</div>
@@ -385,6 +384,8 @@
 	var FunWithTriangles = new FWT();
 </script>
 
+
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -395,5 +396,6 @@
   ga('send', 'pageview');
 
 </script>
+
 </body>
 </html>
