--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
  
 <header am-SiteHeader>
 
-	<div am-SiteHeader-Header data-triEffect="/images/header_tall.svg">
+	<div am-SiteHeader-Header data-triEffect="/images/header_tall.svg" data-aspectRatio="0.292">
     	<canvas>Fun with Triangles</canvas>
     </div>
 
