--- a/app/projects/polyop.html
+++ b/app/projects/polyop.html
@@ -25,7 +25,7 @@
  
 <header am-SiteHeader>
 	
-	<div am-SiteHeader-Header="small" data-triEffect="/images/header_wide.svg">
+	<div am-SiteHeader-Header="small" data-triEffect="/images/header_wide.svg" data-aspectRatio="0.07">
 		<a href="/"><canvas>Fun with Triangles</canvas></a>
 	</div>
 	
