--- a/app/index.html
+++ b/app/index.html
@@ -343,6 +343,21 @@
 	</div>
 </a>
 
+<a am-Strip="project alt" href="/projects/usa-discovery-program">
+	<div am-Row="middle">
+		<div am-Col="m6 m-o1" am-Strip-Anim="1 left">
+			<img am-Strip-Cutout src="/images/graphics/dp_badge_outdoors-01.svg">
+		</div>
+
+		<div am-Col="m6">
+			<h2 am-txt="hug" am-Strip-Anim="2 right">Tying down the USA Discovery Program</h2>
+			<p am-txt="lead" am-Strip-Anim="3 right">
+				How I helped create and maintain an award winning training platform for Brand USA.
+			</p>
+		</div>
+	</div>
+</a>
+
 
 <div am-SiteFooter data-triEffect id="contact">
 	<canvas am-SiteFooter-Bg></canvas>
